--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "vue-backend",
+  "name": "steelcraft-server",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "dependencies": {
-    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemailer": "^6.4.10"
@@ -17,12 +16,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ALukashevich-hub/vueBackend.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ALukashevich-hub/vueBackend/issues"
-  },
-  "homepage": "https://github.com/ALukashevich-hub/vueBackend#readme"
+    "url": "git+https://github.com/ALukashevich-hub/Steelcraft-server.git"
+  }
 }
